--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
         <sadk.version>3.6.2.1</sadk.version>
         <hutool-all.version>5.4.3</hutool-all.version>
         <!--  <com.google.zxing.version>3.3.0</com.google.zxing.version>  -->
+
+        <spring-context.version>5.3.15</spring-context.version>
+        <spring-data-redis.version>2.6.1</spring-data-redis.version>
+        <fastjson.version>1.2.83</fastjson.version>
+        <commons-lang.version>2.5</commons-lang.version>
+        <lombok.version>1.18.22</lombok.version>
     </properties>
 
 
